deployment/webapp01/ingress-webapp01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp01-tls
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: webapp01.cloudteam.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp01
                port:
                  number: 80
  tls:
    - hosts:
      - webapp01.cloudteam.work
      secretName: echo-webapp01-tls
